Package_Tools/include-C/poppler/glib/poppler_form_field.h

#define POPPLER_TYPE_FORM_FIELD (poppler_form_field_get_type())
#define POPPLER_FORM_FIELD(obj) (G_TYPE_CHECK_INSTANCE_CAST((obj), POPPLER_TYPE_FORM_FIELD, PopplerFormField))
#define POPPLER_IS_FORM_FIELD(obj) (G_TYPE_CHECK_INSTANCE_TYPE((obj), POPPLER_TYPE_FORM_FIELD))
extern
GType poppler_form_field_get_type(void) ;
/* Signature Field */
#define POPPLER_TYPE_SIGNATURE_INFO (poppler_signature_info_get_type())
extern
GType poppler_signature_info_get_type(void) ;
/* Signing Data */
#define POPPLER_TYPE_SIGNING_DATA (poppler_signing_data_get_type())
extern
GType poppler_signing_data_get_type(void) ;
extern
PopplerSigningData *poppler_signing_data_new(void);
extern
PopplerSigningData *poppler_signing_data_copy(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_free(PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_destination_filename(PopplerSigningData *signing_data, const gchar *filename);
extern
const gchar *poppler_signing_data_get_destination_filename(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_certificate_info(PopplerSigningData *signing_data, const PopplerCertificateInfo *certificate_info);
extern
const PopplerCertificateInfo *poppler_signing_data_get_certificate_info(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_page(PopplerSigningData *signing_data, int page);
extern
int poppler_signing_data_get_page(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_signature_text(PopplerSigningData *signing_data, const gchar *signature_text);
extern
const gchar *poppler_signing_data_get_signature_text(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_signature_text_left(PopplerSigningData *signing_data, const gchar *signature_text_left);
extern
const gchar *poppler_signing_data_get_signature_text_left(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_signature_rectangle(PopplerSigningData *signing_data, const PopplerRectangle *signature_rect);
extern
const PopplerRectangle *poppler_signing_data_get_signature_rectangle(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_font_color(PopplerSigningData *signing_data, const PopplerColor *font_color);
extern
const PopplerColor *poppler_signing_data_get_font_color(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_font_size(PopplerSigningData *signing_data, gdouble font_size);
extern
gdouble poppler_signing_data_get_font_size(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_left_font_size(PopplerSigningData *signing_data, gdouble font_size);
extern
gdouble poppler_signing_data_get_left_font_size(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_border_color(PopplerSigningData *signing_data, const PopplerColor *border_color);
extern
const PopplerColor *poppler_signing_data_get_border_color(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_border_width(PopplerSigningData *signing_data, gdouble border_width);
extern
gdouble poppler_signing_data_get_border_width(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_background_color(PopplerSigningData *signing_data, const PopplerColor *background_color);
extern
const PopplerColor *poppler_signing_data_get_background_color(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_field_partial_name(PopplerSigningData *signing_data, const gchar *field_partial_name);
extern
const gchar *poppler_signing_data_get_field_partial_name(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_reason(PopplerSigningData *signing_data, const gchar *reason);
extern
const gchar *poppler_signing_data_get_reason(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_location(PopplerSigningData *signing_data, const gchar *location);
extern
const gchar *poppler_signing_data_get_location(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_image_path(PopplerSigningData *signing_data, const gchar *image_path);
extern
const gchar *poppler_signing_data_get_image_path(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_password(PopplerSigningData *signing_data, const gchar *password);
extern
const gchar *poppler_signing_data_get_password(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_document_owner_password(PopplerSigningData *signing_data, const gchar *document_owner_password);
extern
const gchar *poppler_signing_data_get_document_owner_password(const PopplerSigningData *signing_data);
extern
void poppler_signing_data_set_document_user_password(PopplerSigningData *signing_data, const gchar *document_user_password);
extern
const gchar *poppler_signing_data_get_document_user_password(const PopplerSigningData *signing_data);
/* Certificate Information */
#define POPPLER_TYPE_CERTIFICATE_INFO (poppler_certificate_info_get_type())
extern
GType poppler_certificate_info_get_type(void) ;
PopplerCertificateInfo *poppler_certificate_info_new(void);
extern
PopplerCertificateInfo *poppler_certificate_info_copy(const PopplerCertificateInfo *certificate_info);
extern
void poppler_certificate_info_free(PopplerCertificateInfo *certificate_info);
extern
const char *poppler_certificate_info_get_id(const PopplerCertificateInfo *certificate_info);
extern
const char *poppler_certificate_info_get_subject_common_name(const PopplerCertificateInfo *certificate_info);
extern
const char *poppler_certificate_info_get_subject_organization(const PopplerCertificateInfo *certificate_info);
extern
const char *poppler_certificate_info_get_subject_email(const PopplerCertificateInfo *certificate_info);
extern
const char *poppler_certificate_info_get_issuer_common_name(const PopplerCertificateInfo *certificate_info);
extern
const char *poppler_certificate_info_get_issuer_organization(const PopplerCertificateInfo *certificate_info);
extern
const char *poppler_certificate_info_get_issuer_email(const PopplerCertificateInfo *certificate_info);
extern
GDateTime *poppler_certificate_info_get_issuance_time(const PopplerCertificateInfo *certificate_info);
extern
GDateTime *poppler_certificate_info_get_expiration_time(const PopplerCertificateInfo *certificate_info);
extern
PopplerCertificateInfo *poppler_get_certificate_info_by_id(const char *id);
extern
GList *poppler_get_available_signing_certificates(void);
/* NSS */
extern
void poppler_set_nss_dir(const char *path);
extern
char *poppler_get_nss_dir(void);
typedef char *(*PopplerNssPasswordFunc)(const gchar *text);
extern
void poppler_set_nss_password_callback(PopplerNssPasswordFunc func);