packages/poppler/poppler/poppler_form_field.inc


function poppler_signing_data_get_type: TGType; cdecl; external poppler_glib;
function poppler_signing_data_new: PPopplerSigningData; cdecl; external poppler_glib;
function poppler_signing_data_copy(signing_data: PPopplerSigningData): PPopplerSigningData; cdecl; external poppler_glib;
procedure poppler_signing_data_free(signing_data: PPopplerSigningData); cdecl; external poppler_glib;
procedure poppler_signing_data_set_destination_filename(signing_data: PPopplerSigningData; filename: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_destination_filename(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;
procedure poppler_signing_data_set_certificate_info(signing_data: PPopplerSigningData; certificate_info: PPopplerCertificateInfo); cdecl; external poppler_glib;
function poppler_signing_data_get_certificate_info(signing_data: PPopplerSigningData): PPopplerCertificateInfo; cdecl; external poppler_glib;
procedure poppler_signing_data_set_page(signing_data: PPopplerSigningData; page: longint); cdecl; external poppler_glib;
function poppler_signing_data_get_page(signing_data: PPopplerSigningData): longint; cdecl; external poppler_glib;
procedure poppler_signing_data_set_signature_text(signing_data: PPopplerSigningData; signature_text: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_signature_text(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;
procedure poppler_signing_data_set_signature_text_left(signing_data: PPopplerSigningData; signature_text_left: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_signature_text_left(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;
procedure poppler_signing_data_set_signature_rectangle(signing_data: PPopplerSigningData; signature_rect: PPopplerRectangle); cdecl; external poppler_glib;
function poppler_signing_data_get_signature_rectangle(signing_data: PPopplerSigningData): PPopplerRectangle; cdecl; external poppler_glib;
procedure poppler_signing_data_set_font_color(signing_data: PPopplerSigningData; font_color: PPopplerColor); cdecl; external poppler_glib;
function poppler_signing_data_get_font_color(signing_data: PPopplerSigningData): PPopplerColor; cdecl; external poppler_glib;
procedure poppler_signing_data_set_font_size(signing_data: PPopplerSigningData; font_size: Tgdouble); cdecl; external poppler_glib;
function poppler_signing_data_get_font_size(signing_data: PPopplerSigningData): Tgdouble; cdecl; external poppler_glib;
procedure poppler_signing_data_set_left_font_size(signing_data: PPopplerSigningData; font_size: Tgdouble); cdecl; external poppler_glib;
function poppler_signing_data_get_left_font_size(signing_data: PPopplerSigningData): Tgdouble; cdecl; external poppler_glib;
procedure poppler_signing_data_set_border_color(signing_data: PPopplerSigningData; border_color: PPopplerColor); cdecl; external poppler_glib;
function poppler_signing_data_get_border_color(signing_data: PPopplerSigningData): PPopplerColor; cdecl; external poppler_glib;
procedure poppler_signing_data_set_border_width(signing_data: PPopplerSigningData; border_width: Tgdouble); cdecl; external poppler_glib;
function poppler_signing_data_get_border_width(signing_data: PPopplerSigningData): Tgdouble; cdecl; external poppler_glib;
procedure poppler_signing_data_set_background_color(signing_data: PPopplerSigningData; background_color: PPopplerColor); cdecl; external poppler_glib;
function poppler_signing_data_get_background_color(signing_data: PPopplerSigningData): PPopplerColor; cdecl; external poppler_glib;
procedure poppler_signing_data_set_field_partial_name(signing_data: PPopplerSigningData; field_partial_name: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_field_partial_name(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;
procedure poppler_signing_data_set_reason(signing_data: PPopplerSigningData; reason: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_reason(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;
procedure poppler_signing_data_set_location(signing_data: PPopplerSigningData; location: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_location(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;
procedure poppler_signing_data_set_image_path(signing_data: PPopplerSigningData; image_path: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_image_path(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;
procedure poppler_signing_data_set_password(signing_data: PPopplerSigningData; password: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_password(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;
procedure poppler_signing_data_set_document_owner_password(signing_data: PPopplerSigningData; document_owner_password: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_document_owner_password(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;
procedure poppler_signing_data_set_document_user_password(signing_data: PPopplerSigningData; document_user_password: Pgchar); cdecl; external poppler_glib;
function poppler_signing_data_get_document_user_password(signing_data: PPopplerSigningData): Pgchar; cdecl; external poppler_glib;

function POPPLER_TYPE_CERTIFICATE_INFO: TGType;

function poppler_certificate_info_get_type: TGType; cdecl; external poppler_glib;
function poppler_certificate_info_new: PPopplerCertificateInfo; cdecl; external poppler_glib;
function poppler_certificate_info_copy(certificate_info: PPopplerCertificateInfo): PPopplerCertificateInfo; cdecl; external poppler_glib;
procedure poppler_certificate_info_free(certificate_info: PPopplerCertificateInfo); cdecl; external poppler_glib;
function poppler_certificate_info_get_id(certificate_info: PPopplerCertificateInfo): pchar; cdecl; external poppler_glib;
function poppler_certificate_info_get_subject_common_name(certificate_info: PPopplerCertificateInfo): pchar; cdecl; external poppler_glib;
function poppler_certificate_info_get_subject_organization(certificate_info: PPopplerCertificateInfo): pchar; cdecl; external poppler_glib;
function poppler_certificate_info_get_subject_email(certificate_info: PPopplerCertificateInfo): pchar; cdecl; external poppler_glib;
function poppler_certificate_info_get_issuer_common_name(certificate_info: PPopplerCertificateInfo): pchar; cdecl; external poppler_glib;
function poppler_certificate_info_get_issuer_organization(certificate_info: PPopplerCertificateInfo): pchar; cdecl; external poppler_glib;
function poppler_certificate_info_get_issuer_email(certificate_info: PPopplerCertificateInfo): pchar; cdecl; external poppler_glib;
function poppler_certificate_info_get_issuance_time(certificate_info: PPopplerCertificateInfo): PGDateTime; cdecl; external poppler_glib;
function poppler_certificate_info_get_expiration_time(certificate_info: PPopplerCertificateInfo): PGDateTime; cdecl; external poppler_glib;
function poppler_get_certificate_info_by_id(id: pchar): PPopplerCertificateInfo; cdecl; external poppler_glib;
function poppler_get_available_signing_certificates: PGList; cdecl; external poppler_glib;

procedure poppler_set_nss_dir(path: pchar); cdecl; external poppler_glib;
function poppler_get_nss_dir: pchar; cdecl; external poppler_glib;

type
  TPopplerNssPasswordFunc = function(text: Pgchar): pchar; cdecl;

procedure poppler_set_nss_password_callback(func: TPopplerNssPasswordFunc); cdecl; external poppler_glib;

// === Konventiert am: 15-8-25 16:55:00 ===

function POPPLER_TYPE_FORM_FIELD: TGType;
function POPPLER_FORM_FIELD(obj: Pointer): PPopplerFormField;
function POPPLER_IS_FORM_FIELD(obj: Pointer): Tgboolean;

{$ENDIF read_interface}


{$IFDEF read_implementation}

function POPPLER_TYPE_FORM_FIELD: TGType;
begin
  POPPLER_TYPE_FORM_FIELD := poppler_form_field_get_type;
end;

function POPPLER_FORM_FIELD(obj: Pointer): PPopplerFormField;
begin
  Result := PPopplerFormField(g_type_check_instance_cast(obj, POPPLER_TYPE_FORM_FIELD));
end;

function POPPLER_IS_FORM_FIELD(obj: Pointer): Tgboolean;
begin
  Result := g_type_check_instance_is_a(obj, POPPLER_TYPE_FORM_FIELD);
end;

// ====

function POPPLER_TYPE_SIGNATURE_INFO: TGType;
begin
  POPPLER_TYPE_SIGNATURE_INFO := poppler_signature_info_get_type;
end;

function POPPLER_TYPE_SIGNING_DATA: TGType;
begin
  POPPLER_TYPE_SIGNING_DATA := poppler_signing_data_get_type;
end;

function POPPLER_TYPE_CERTIFICATE_INFO: TGType;
begin
  POPPLER_TYPE_CERTIFICATE_INFO := poppler_certificate_info_get_type;
end;


{$ENDIF read_implementation}
